RESOLVED FIXED42113
Chromium: not sending key down events to plugins
https://bugs.webkit.org/show_bug.cgi?id=42113
Summary Chromium: not sending key down events to plugins
Viet-Trung Luu
Reported 2010-07-12 14:42:30 PDT
Chromium isn't sending key down events to plugins. This was broken by r62743.
Attachments
proposed patch (1.28 KB, patch)
2010-07-12 14:56 PDT, Viet-Trung Luu
no flags
(hopefully) fixed patch (1.41 KB, application/octet-stream)
2010-07-12 15:52 PDT, Viet-Trung Luu
no flags
patch again (1.41 KB, patch)
2010-07-12 15:53 PDT, Viet-Trung Luu
no flags
Viet-Trung Luu
Comment 1 2010-07-12 14:56:35 PDT
Created attachment 61273 [details] proposed patch
Adam Barth
Comment 2 2010-07-12 15:16:23 PDT
Comment on attachment 61273 [details] proposed patch Clear Main Comment Box:8 + * ../../../../src/WebPluginContainerImpl.cpp: This path is wrong.
Viet-Trung Luu
Comment 3 2010-07-12 15:52:14 PDT
Created attachment 61278 [details] (hopefully) fixed patch The previous patch also had broken paths. Hopefully this one is okay.
John Abd-El-Malek
Comment 4 2010-07-12 15:53:14 PDT
whoa, sorry about that.
Viet-Trung Luu
Comment 5 2010-07-12 15:53:24 PDT
Created attachment 61279 [details] patch again Remembering to click the "patch" checkbox.
WebKit Commit Bot
Comment 6 2010-07-12 22:30:41 PDT
Comment on attachment 61279 [details] patch again Clearing flags on attachment: 61279 Committed r63170: <http://trac.webkit.org/changeset/63170>
WebKit Commit Bot
Comment 7 2010-07-12 22:30:46 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.