2010-07-12  Viet-Trung Luu  <viettrungluu@chromium.org>

Reviewed by Darin Fisher.

        [Chromium] Pass key down events on to plugins.
        https://bugs.webkit.org/show_bug.cgi?id=42113

        * src/WebPluginContainerImpl.cpp:
        (WebKit::WebPluginContainerImpl::handleKeyboardEvent):

Canonical link: https://commits.webkit.org/54026@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@63170 268f45cc-cd09-0410-ab3c-d52691b4dbfc